deploy-n.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-n
spec:
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        volumeMounts:
        - name: nginx-vl
          mountPath: /usr/share/nginx/html

      volumes:
      - name: nginx-vl
        configMap:
          name: cfm-n
