deploy-nm.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-nm
spec:
  selector:
    matchLabels:
      app: nginx-multi
  template:
    metadata:
      labels:
        app: nginx-multi
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        volumeMounts:
        - name: nginx-vl
          mountPath: /usr/share/nginx/html

      - name: multitool
        image: wbitt/network-multitool
      volumes:
      - name: nginx-vl
        configMap:
          name: cfm
