svc-n.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-n
spec:
  selector:
    app: nginx
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
