svc-nm.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-nm
spec:
  selector:
    app: nginx-multi
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
