ingress-n.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: markin.ai
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: svc-n
                port:
                  number: 80
  tls:
    - hosts:
      - markin.ai
      secretName: nginx-tls
